--- a/_config.yml
+++ b/_config.yml
@@ -43,3 +43,4 @@ layouts_dir: ./doks-theme/_layouts
 includes_dir: ./doks-theme/_includes
 exclude: [ 'README.md', 'CHANGELOG.md' ]
 permalink: /:title/
+name: The Product Playbook
