updated github url

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ doks:
             copyright: Copyright &copy; 2018. <a href="https://krumhausen.com/">Krumhausen Consulting</a><br> All rights reserved.
         social_list:
             - network_name: github
-              profile_url: 'http://github.com/mrkrumhausen/product-playbook'
+              profile_url: 'https://github.com/mrkrumhausen/product-space'
             - network_name: linkedin
               profile_url: 'https://linkedin.com/in/krumhausen/'
         #     - network_name: twitter
