--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ doks:
             text: The Product Space 🚀
             image:
         nav:
-            # - item_name: Plays
-            #   item_url: '/plays'
-            # - item_name: Cheats
-            #   item_url: '/cheats'
+            - item_name: Plays
+              item_url: '/plays'
+            - item_name: Tools
+              item_url: '/tools'
     footer:
         content:
             logo:
